<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/dialog_sensitivity_text"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/seekbar_sensitivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="20" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/dialog_sensitivity_low"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seekbar_sensitivity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/dialog_sensitivity_high"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_sensitivity_default"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sensitivity_default" />

        <Button
            android:id="@+id/button_sensitivity_close"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sensitivity_save" />
    </LinearLayout>

</LinearLayout>